<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DatosActivity">

    <!-- Campo para el Nombre -->
    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@string/et_nombre"
        android:textSize="16sp"
        tools:ignore="MissingConstraints" />

    <!-- Campo para el Número de Teléfono -->
    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_telefono"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="16sp"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints" />

    <!-- Campo para el Email -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="16sp"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints" />

    <!-- Botón para tomar la Fotografía (CARA) -->
    <Button
        android:id="@+id/btn_foto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_foto_description"
        android:textSize="16sp"
        tools:ignore="MissingConstraints" />

    <!-- Imagen para mostrar la Fotografía -->
    <ImageView
        android:id="@+id/iv_foto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/iv_foto_description"
        android:scaleType="centerCrop"

        tools:ignore="MissingConstraints" />

    <!-- Botón para obtener la Ubicación -->
    <Button
        android:id="@+id/btn_ubicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ubicacion_text"
        android:textSize="16sp"

        tools:ignore="MissingConstraints" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/map_description"
        tools:ignore="MissingConstraints" />

    <!-- Botón para generar el Comprobante PDF -->
    <Button
        android:id="@+id/btn_comprobante_pdf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_comprobante_pdf_text"
        android:contentDescription="@string/btn_comprobante_pdf_description"
        android:textSize="16sp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
